update push-to-aur workflow
Use "Publish AUR package" action

--- a/.github/workflows/push-to-aur.yml
+++ b/.github/workflows/push-to-aur.yml
@@ -11,10 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Git checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: '0'
+      - name: Git checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
+
+      - name: Publish AUR package
+        uses: KSXGitHub/github-actions-deploy-aur
+        with:
+          pkgname: pscale
+          pkgbuild: ./PKGBUILD
+          updpkgsums: true
+          commit_username: ${{ secrets.AUR_USERNAME }}
+          commit_email: ${{ secrets.AUR_EMAIL }}
+          ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
     
-    - name: Push aur/master
-      run: git push aur master
